--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
   <title>Geometry Vibes | StaticQuasar931 Unblocked Game</title>
   <meta name="description" content="Play Geometry Vibes unblocked in your browser. Reaction-based arcade action inspired by Geometry Dash: avoid obstacles, traps, and spikes in waves and keep your arrow on the route as far as possible. Fullscreen Unity WebGL, school-safe by StaticQuasar931.">
+
   <link rel="canonical" href="https://staticquasar931.github.io/Geometry-Vibes/">
 
-  <meta name="keywords" content="geometry vibes unblocked, geometry vibes game unblocked, geometry vibes school, geometry vibes working at school, geometry vibes play at school, geometry vibes fullscreen, geometry vibes unity webgl, geometry vibes browser game, geometry vibes arcade game, geometry vibes reaction game, geometry vibes geometry dash inspired, geometry vibes dash inspired, geometry vibes spikes, geometry vibes obstacles, geometry vibes traps, geometry vibes waves, geometry vibes arrow game, geometry vibes route game, geometry vibes no download, geometry vibes free game, geometry vibes online game,
+  <!-- SEO keyword coverage -->
+  <meta name="keywords" content="geometry vibes unblocked, geometry vibes game unblocked, geometry vibes school, geometry vibes working at school, geometry vibes play at school, geometry vibes fullscreen, geometry vibes unity webgl, geometry vibes browser game, geometry vibes arcade game, geometry vibes reaction game, geometry vibes geometry dash inspired, geometry vibes dash game, geometry vibes spikes, geometry vibes obstacles, geometry vibes traps, geometry vibes wave mode, geometry vibes arrow game, geometry vibes route game, geometry vibes no download, geometry vibes free game, geometry vibes online game,
   geometry vibes unbl0cked, geometry vibes unblocked g@me, geometry vibes g@mes, geometry vibes g@me unblocked, geometry vibes g@me school, geometry vibes g@me working at school,
   unblocked games, unblocked game, unblocked g@mes, unblocked g@me, school safe games, school-safe games, games for school, games working at school, browser games unblocked, unity games unblocked, unity webgl unblocked,
   StaticQuasar931, staticquasar931, static quasar 931, static 931, static931, static, staticquasar, staticq, staticq931, 931, StaticQuasar931 unblocked games, StaticQuasar931 games, StaticQuasar931 g@mes">
@@ -28,6 +30,7 @@
   <meta name="twitter:description" content="Reaction-based arcade game inspired by Geometry Dash. Avoid obstacles, traps, and spikes and go as far as possible.">
   <meta name="twitter:image" content="https://cdn.jsdelivr.net/gh/StaticQuasar931/Images@main/icon.png">
 
+  <!-- Optional structured data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -38,7 +41,10 @@
     "image": "https://cdn.jsdelivr.net/gh/StaticQuasar931/Images@main/icon.png",
     "applicationCategory": "Game",
     "operatingSystem": "Web",
-    "author": { "@type": "Person", "name": "StaticQuasar931" }
+    "author": {
+      "@type": "Person",
+      "name": "StaticQuasar931"
+    }
   }
   </script>
 
@@ -143,6 +149,7 @@
       z-index: 10000;
     }
 
+    /* Unity error overlay (prevents silent "black screen") */
     #unity-error {
       display: none;
       position: fixed;
@@ -158,8 +165,17 @@
       z-index: 10001;
       color: #eaf4ff;
     }
-    #unity-error h2{ margin: 0 0 8px 0; font-size: 16px; }
-    #unity-error p{ margin: 0 0 8px 0; font-size: 13px; line-height: 1.35; opacity: .95; }
+    #unity-error h2{
+      margin: 0 0 8px 0;
+      font-size: 16px;
+      letter-spacing: .2px;
+    }
+    #unity-error p{
+      margin: 0 0 8px 0;
+      font-size: 13px;
+      line-height: 1.35;
+      opacity: .95;
+    }
     #unity-error button{
       border: 1px solid rgba(255,255,255,.2);
       background: rgba(255,255,255,.08);
@@ -172,7 +188,7 @@
 
     /* Visual SEO: Static Menu (top-left) */
     #staticMenu{
-      position:fixed; left:12px; bottom:12px; z-index:9999;
+      position:fixed; left:12px; top:12px; z-index:9999;
       display:flex; gap:10px; align-items:center; user-select:none;
       padding:10px 14px; border-radius:12px;
       background:linear-gradient(135deg, rgba(20,20,28,.9), rgba(20,20,28,.6));
@@ -186,6 +202,20 @@
       border:1px solid rgba(255,255,255,.15); background:rgba(255,255,255,.06)
     }
     @keyframes menuEnter{ from{opacity:0; transform:translateY(-8px)} to{opacity:1; transform:translateY(0)} }
+
+    /* Game label block under Static Menu */
+    #staticGameLabel{
+      position:fixed; left:12px; top:58px; z-index:9999;
+      display:block; user-select:none;
+      padding:10px 14px; border-radius:12px;
+      background:linear-gradient(135deg, rgba(20,20,28,.9), rgba(20,20,28,.6));
+      border:1px solid rgba(94,225,255,.25);
+      color:#e8f3ff; box-shadow:var(--shadow);
+      font-size:13px;
+      animation:menuEnter .6s ease .2s both;
+    }
+    #staticGameLabel b{ color:#ffffff }
+    #staticGameLabel .sub{ opacity:.85; font-weight:700; color:#bfefff }
 
     /* Visual SEO: Rotating slide-in widget (bottom-right) */
     #staticSlideMenu{
@@ -204,6 +234,14 @@
     @keyframes slideIn{ from{opacity:0; transform:translateX(140px) scale(.96)} to{opacity:1; transform:translateX(0) scale(1)} }
     @keyframes slideOut{ from{opacity:1; transform:translateX(0) scale(1)} to{opacity:0; transform:translateX(140px) scale(.96)} }
 
+    /* Subtle twinkle on the top-left link */
+    @keyframes twinkle {
+      0%, 92% { text-shadow: none; filter: none; }
+      95% { text-shadow: 0 0 10px rgba(94,225,255,.85); filter: brightness(1.2); }
+      100% { text-shadow: none; filter: none; }
+    }
+    #staticMenu a{ animation: twinkle 6.5s infinite; }
+
     .seo-hidden{
       position:absolute; width:1px; height:1px; overflow:hidden;
       clip:rect(1px,1px,1px,1px); white-space:nowrap;
@@ -211,6 +249,7 @@
 
     @media (max-width:600px){
       #staticMenu{ font-size:13px; padding:8px 12px }
+      #staticGameLabel{ font-size:12.5px; top:54px; padding:9px 12px }
       #staticSlideMenu{ width:88px; height:88px }
       .centered{ width: 320px; margin-left: -160px; margin-top: -130px; }
     }
@@ -218,13 +257,16 @@
 </head>
 
 <body>
-  <!-- Q9vR3kL2nP7xA1z -->
-  <!-- mT4s8Jc0Wb6Yh5u -->
-
   <!-- Visual SEO: Static Menu -->
   <div id="staticMenu" role="region" aria-label="StaticQuasar menu">
     <a href="https://sites.google.com/view/staticquasar931/gm3z" target="_blank" rel="noopener">More Unblocked Games by Static</a>
     <span id="closeStaticMenu" title="Hide temporarily">✕</span>
+  </div>
+
+  <!-- Game label block -->
+  <div id="staticGameLabel" role="note" aria-label="Game label">
+    <b>Geometry Vibes</b><br>
+    <span class="sub">alternate (unblocked)</span>
   </div>
 
   <!-- Visual SEO: Rotating widget -->
@@ -254,10 +296,9 @@
     <canvas id="unity-canvas" data-pixel-art=""></canvas>
 
     <script>
-      // 7pNf2Dq9Kx1Vt3R
       window.onbeforeunload = () => "Are you sure you want to leave? Your session may be interrupted.";
 
-      // Critical fix: safe stubs for ad and SDK hooks so Unity never throws ReferenceError.
+      // Safe SDK stubs: prevents crashes if build expects ads/SDK functions.
       (function(){
         const ensureFn = (name, fn) => {
           if (typeof window[name] !== "function") window[name] = fn;
@@ -265,46 +306,67 @@
 
         ensureFn("InitSDKJs", function(){ return true; });
 
-        ensureFn("LoadRewardedAdsJs", function(){ return true; });
-        ensureFn("LoadInterstitialAdsJs", function(){ return true; });
-
         ensureFn("CallInterstitialAdsJs", function(){ return true; });
         ensureFn("CallRewardedAdsJs", function(){ return true; });
-
         ensureFn("IsRewardedReadyJs", function(){ return false; });
         ensureFn("IsInterstitialReadyJs", function(){ return false; });
 
         ensureFn("ShowInterstitial", function(){});
         ensureFn("ShowRewarded", function(){});
-
-        ensureFn("RequestInterstitial", function(){ return true; });
-        ensureFn("RequestRewarded", function(){ return true; });
-      })();
-
-      // AudioContext autoplay policy fix: resume audio after first user gesture.
-      (function(){
-        let done = false;
-        function resumeAll(){
-          if (done) return;
-          done = true;
-          try{
-            const AC = window.AudioContext || window.webkitAudioContext;
-            if (!AC) return;
-            const ctx = window.__sq931_audioctx || new AC();
-            window.__sq931_audioctx = ctx;
-            if (ctx && ctx.state === "suspended") ctx.resume().catch(function(){});
-          }catch(e){}
-          window.removeEventListener("pointerdown", resumeAll);
-          window.removeEventListener("keydown", resumeAll);
-          window.removeEventListener("touchstart", resumeAll);
-        }
-        window.addEventListener("pointerdown", resumeAll, { once: true, passive: true });
-        window.addEventListener("keydown", resumeAll, { once: true });
-        window.addEventListener("touchstart", resumeAll, { once: true, passive: true });
       })();
     </script>
 
     <script src="Build/GeometryVibes_V1_39.loader.js"></script>
+
+    <!-- Intercept outgoing links from the Unity game and redirect them to StaticQuasar931 pages -->
+    <script>
+      (function(){
+        // List of original TwoPlayerGames URLs to intercept
+        const oldLinks = [
+          "https://www.twoplayergames.org/?utm_source=Html5Game&utm_medium=GeometryVibes_TPG",
+          "https://www.twoplayergames.org/game/geometry-vibes-x-ball/?utm_source=Html5Game&utm_medium=GeometryVibes_TPG",
+          "https://www.twoplayergames.org/game/snow-rush-3d/?utm_source=Html5Game&utm_medium=GeometryVibes_TPG"
+        ];
+        // Corresponding replacement URLs hosted on StaticQuasar931 (update as needed)
+        const newLinks = [
+          "https://sites.google.com/view/staticquasar931/gm3z/g-dash-wave",
+          "https://sites.google.com/view/staticquasar931/gm3z/g-dash-wave",
+          "https://sites.google.com/view/staticquasar931/gm3z/snow-rider?authuser=0"
+        ];
+        // Preserve existing window.open behavior and override it to replace the link when needed
+        const originalOpen = window.open;
+        window.open = function(url, target, features) {
+          try {
+            if (typeof url === "string") {
+              for (var i = 0; i < oldLinks.length; i++) {
+                if (url && url.indexOf(oldLinks[i]) === 0) {
+                  url = newLinks[i];
+                  break;
+                }
+              }
+            }
+          } catch(e){}
+          return originalOpen.call(this, url, target, features);
+        };
+        // Also override location.assign and location.replace to handle navigation triggered by Unity
+        ["assign","replace"].forEach(function(method){
+          var original = window.location[method].bind(window.location);
+          window.location[method] = function(url) {
+            try {
+              if (typeof url === "string") {
+                for (var i = 0; i < oldLinks.length; i++) {
+                  if (url && url.indexOf(oldLinks[i]) === 0) {
+                    url = newLinks[i];
+                    break;
+                  }
+                }
+              }
+            } catch(e){}
+            return original(url);
+          };
+        });
+      })();
+    </script>
 
     <script>
       var canvas = document.querySelector("#unity-canvas");
@@ -368,7 +430,6 @@
 
         container.style.width = canvas.style.width = w + "px";
         container.style.height = canvas.style.height = h + "px";
-        // HIWSGSHTJAITLINCHQJUJAFSJAKRL943712548947
         container.style.top = Math.floor((window.innerHeight - h) / 2) + "px";
         container.style.left = Math.floor((window.innerWidth - w) / 2) + "px";
       }
@@ -437,12 +498,16 @@
       // Visual SEO: Static Menu show/hide with 3 minute return
       (function(){
         const menu = document.getElementById("staticMenu");
+        const label = document.getElementById("staticGameLabel");
         const btn  = document.getElementById("closeStaticMenu");
         const KEY  = "sq931_staticMenu_hidden_until";
-        const show = () => { if (menu) menu.style.display = "flex"; };
+        const show = () => {
+          if (menu) menu.style.display = "flex";
+          if (label) label.style.display = "block";
+        };
         const hideFor3m = () => {
-          if (!menu) return;
-          menu.style.display = "none";
+          if (menu) menu.style.display = "none";
+          if (label) label.style.display = "none";
           const until = Date.now() + 180000;
           localStorage.setItem(KEY, String(until));
           setTimeout(show, 180000);
@@ -450,6 +515,7 @@
         const until = parseInt(localStorage.getItem(KEY)||"0", 10);
         if (until && Date.now() < until){
           if (menu) menu.style.display = "none";
+          if (label) label.style.display = "none";
           setTimeout(show, until - Date.now());
         } else {
           show();
@@ -474,7 +540,7 @@
           link: "https://discord.gg/DP2hM7RRhR"
         };
         const INSTA = {
-          src:  "https://cdn.jsdelivr.net/gh/StaticQuasar931/Images@main/Follow-us--IG",
+          src:  "https://cdn.jsdelivr.net/gh/StaticQuasar931/Images@main/Follow-us--IG.png",
           alt:  "StaticQuasar931 Instagram",
           link: "https://www.instagram.com/freeschoolgamepage/"
         };
@@ -489,8 +555,18 @@
           a.href = state.link;
           img.alt = state.alt;
           img.style.opacity = "0";
-          setTimeout(function(){ img.src = state.src; }, 80);
-          img.onload = function(){ img.style.opacity = "1"; };
+
+          // Avoid flicker and avoid stuck opacity when an image fails
+          const nextSrc = state.src;
+          const tmp = new Image();
+          tmp.onload = function(){
+            img.src = nextSrc;
+            img.style.opacity = "1";
+          };
+          tmp.onerror = function(){
+            img.style.opacity = "1";
+          };
+          tmp.src = nextSrc;
         }
         function delay(ms){ return new Promise(function(r){ setTimeout(r, ms); }); }
 
@@ -513,7 +589,7 @@
 
       // Visual SEO: y + u + i toggles all Visual SEO
       (function(){
-        const idsToToggle = ["staticMenu", "staticSlideMenu"];
+        const idsToToggle = ["staticMenu", "staticGameLabel", "staticSlideMenu"];
         let seq = [];
         const target = ["y","u","i"];
         function toggle(){
@@ -521,7 +597,8 @@
             const el = document.getElementById(id);
             if(!el) return;
             const isHidden = (el.style.display === "none" || getComputedStyle(el).display === "none");
-            el.style.display = isHidden ? (id === "staticMenu" ? "flex" : "block") : "none";
+            if (id === "staticMenu") el.style.display = isHidden ? "flex" : "none";
+            else el.style.display = isHidden ? (id === "staticSlideMenu" ? "block" : "block") : "none";
           });
         }
         window.addEventListener("keydown", function(e){
@@ -530,22 +607,31 @@
           if (seq.join("") === target.join("")) toggle();
         });
       })();
-
-      // a6Zr1Ue8Lq3Hn0S
-      // X5cM9bP2vT7kQ4d
     </script>
   </div>
 
+  <!-- Hidden SEO content (200+ words, absolute links, maximum keyword coverage) -->
   <div class="seo-hidden" aria-hidden="true">
     <h1>Geometry Vibes unblocked game</h1>
+
     <p>
-      Geometry Vibes is a reaction-based arcade game where you avoid obstacles, traps and spikes that come at you in waves.
-      Your goal is to keep your arrow on the route and take it as far as possible. Geometry Vibes is inspired by Geometry Dash.
-      Play Geometry Vibes unblocked, working at school, school-safe, fullscreen Unity WebGL.
+      Geometry Vibes is a fast reaction arcade game inspired by Geometry Dash style gameplay. You control an arrow and try to stay on the route while obstacles, traps, and spikes arrive in timed waves. The goal is simple: survive as long as possible, learn the rhythm of each pattern, and keep pushing your best distance. This version is fullscreen Unity WebGL and is designed to run directly in your browser with no download. If the game ever loads slowly at school or on a restricted network, a refresh can help, and trying another browser can also improve performance.
     </p>
+
     <p>
-      Brand keywords: StaticQuasar931, staticquasar931, static quasar 931, static931, static, staticquasar, static 931, staticq, staticq931, 931.
-      Links: https://sites.google.com/view/staticquasar931/gm3z | https://sites.google.com/view/staticquasar931/google-form | https://discord.gg/DP2hM7RRhR | https://www.instagram.com/freeschoolgamepage/
+      Looking for Geometry Vibes unblocked, Geometry Vibes working at school, Geometry Vibes school-safe, Geometry Vibes free online game, Geometry Vibes browser game, Geometry Vibes Unity WebGL, Geometry Vibes fullscreen, or Geometry Vibes geometry dash inspired? This page targets those searches and includes extra keyword variants people type such as unblocked, unbl0cked, game, g@me, games, and g@mes. StaticQuasar931 also uses brand keywords for search discovery: StaticQuasar931, staticquasar931, static quasar 931, static 931, static931, static, staticquasar, staticq, staticq931, and 931.
+    </p>
+
+    <p>
+      More unblocked games by Static: https://sites.google.com/view/staticquasar931/gm3z
+      Home: https://sites.google.com/view/staticquasar931
+      Requests and feedback form: https://sites.google.com/view/staticquasar931/google-form
+      Discord: https://discord.gg/DP2hM7RRhR
+      Instagram: https://www.instagram.com/freeschoolgamepage/
+    </p>
+
+    <p>
+      Search phrases: Geometry Vibes unblocked game, Geometry Vibes unblocked g@me, Geometry Vibes school game, Geometry Vibes working at school, Geometry Vibes safe at school, Geometry Vibes online game, Geometry Vibes browser g@me, Geometry Vibes Unity game, Unity WebGL unblocked games, unblocked arcade games, school-safe unblocked games, and more StaticQuasar931 unblocked games.
     </p>
   </div>
 </body>
